# Rust-Hash-Cracker

./: Cargo.toml  readme.md
src/: main.rs
