[package]
name = "hash-cracker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = {version = "4.4.7", features=["cargo"]}
md5 = "0.7.0"
rs_sha512_224 = "0.1.2"
sha1 = "0.10.6"
sha2 = "0.10.8"
sha256 = "1.4.0"
